--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,5 +14,9 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Suggests: 
-    spelling
 Language: en-US
+Imports: 
+    tibble,
+    ggplot2,
+    magrittr
+
